# apple-calendar-mcp

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: findings.md
docs/plans/completed/: 2026-03-11-fix-pyobjc-predicate-method-name.md
src/apple_calendar_mcp/: eventkit_service.py  server.py
tests/: test_eventkit_service.py  test_smoke.py  test_tools_read.py  test_tools_write.py
